<resources>
    <string name="app_name">Login Application</string>
    <string name="submit">Submit</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="email">EMAIL</string>
    <string name="sample_image">Sample Image</string>
    <string name="touch_me">Touch Me</string>
    <string name="new_button">New Button</string>
    <string name="enter_name">Enter Name</string>
    <string name="second_activity">Second Activity</string>
    <string name="register">Register</string>
    <string name="full_name">Fullname</string>
    <string name="subscribe">Subscribe to Email</string>
    <string name="marshmallow">Marshmallow</string>
    <string name="nugget">Nugget</string>
    <string name="lollipop">Lollipop</string>
    <string name="option">Option</string>
    <string name="turn_on">Turn On</string>
    <string name="turn_off">Turn Off</string>
    
    <string-array name="usertype">
        <item>Administrator</item>
        <item>Customer</item>
        <item>Super User</item>
    </string-array>

    <string-array name="usertype2">
        <item>String User 1</item>
        <item>String User 2</item>
        <item>String User 3</item>
        <item>String User 4</item>
    </string-array>
</resources>