<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".SecondActivity">

        <TextView
            android:id = "@+id/title"
            android:text="@string/second_activity"
            android:textSize="46sp"
            android:layout_width="256dp"
            android:layout_height="wrap_content" />
        <!--        sp size is specific for texts-->
        <!--        dp is like an all around sizing format-->
        <!--        you can also use px, inch and sizes that are used for web-->

        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name"
             />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text" >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:hint="@string/email"/>
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:src="@drawable/sample"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/sample_image" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/touch_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatButton
            android:text="@string/new_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>