<?xml version="1.0" encoding="utf-8"?>
<!--as much as possible you only add 2 layouts exception of scrollview-->
<!--to avoid app slowing down-->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="250dp"
            android:background="@color/black"
            android:layout_height="250dp"
            android:layout_gravity="center"/>

       <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="6dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:hint="@string/user_name"
            android:id="@+id/usernameText"/>

    </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatSpinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:id="@+id/usertype"
            android:entries="@array/usertype"/>

        <androidx.appcompat.widget.AppCompatRatingBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rating"
            android:stepSize="0.5"
            android:numStars="5"/>

        <androidx.appcompat.widget.AppCompatSeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seek"
            android:min="0"
            android:max="100"
            android:padding="5dp"/>
        
        <androidx.appcompat.widget.AppCompatCheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/checkbox"
            android:text="@string/subscribe"/>

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/marshmallow"/>

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nugget"/>

        <com.google.android.material.chip.Chip
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lollipop"/>
        
        <com.google.android.material.divider.MaterialDivider
            android:background="@color/black"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_margin="10dp"/>
        
        <RadioGroup
            android:id="@+id/options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option"/>

            <androidx.appcompat.widget.AppCompatRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option"/>

            <androidx.appcompat.widget.AppCompatRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option"/>

        </RadioGroup>

        <androidx.appcompat.widget.AppCompatToggleButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textOn="@string/turn_on"
            android:textOff="@string/turn_off"/>

        <DatePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:datePickerMode="calendar" />

        <TimePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:timePickerMode="clock"/>

        <androidx.appcompat.widget.AppCompatButton
            android:background="@drawable/common_button"
            android:text="@string/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>